--- a/Parcial2_LondonoValenciaSebastian/Parcial2_LondonoValenciaSebastian/appsettings.json
+++ b/Parcial2_LondonoValenciaSebastian/Parcial2_LondonoValenciaSebastian/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  // Esta es mi connection string (conexion a la base de datos)
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=ConcertDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
